# momentum-repro

./: .gitignore  01_data_prep.py  02_factor_build.py  03_backtest.py  04_robustness.py  05_visualize.py  README.md  create_ppt.py  plan.md  pyproject.toml  run_tests.ps1  run_tests.sh  test_full_pipeline.py  test_numba.py  test_pipeline_simple.py  test_run.py
data/: mock.py
data/mock/: test_run.py
data/output/: backtest_results.txt
output/: backtest_results.txt  factors.csv  prices.csv  test_factors.csv
src/: __init__.py  main.py  utils.py
src/data/: 01_data_prep.py  __init__.py
